--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.5.0",
   "description": "the game server for colony",
   "main": "server.js",
+  "keywords":["node.js","javascript","game","server"],
+  "repository": {
+		"type": "git",
+		"url": "https://github.com/12101111/colonyServer.git"
+	},
   "dependencies": {
     "ws": "^2.3.1"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "make test",
     "start": "node server.js"
   },
   "author": "w12101111",
